Spotless with Google Java Style
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>